# projects-2020-2021

./: .jekyll-metadata  _config.yml  index.md
_data/: class.yml  domains.yml
_includes/: details.html  domains.html  introduction.md  projects.html
_layouts/: index.html
_site/: index.html
_site/projects/: index.html
projects/: index.md
projects/project_0/: .gitignore  Dockerfile  README.md  run.py  submission-methodology.json
projects/project_1/: .gitignore  Dockerfile  README.md  requirements.txt
projects/project_10/: .gitignore  LICENSE  Makefile  README.md  run.py
projects/project_11/: .gitignore  run.py
projects/project_11/src/ros_imu_yaw_pkg/: package.xml
projects/project_12/: Dockerfile  README.md  run.py
projects/project_12/src/navigation/: CMakeLists.txt
projects/project_12/src/navigation/config/: joy_teleop.yaml
projects/project_12/src/navigation/launch/: navsat_transform.launch  waypoint_follower.launch
projects/project_12/src/navigation/maps/: ucsd_west_map.pgm
projects/project_12/src/robot_description/: CMakeLists.txt  package.xml
projects/project_13/: .gitignore  README.md  requirements.txt  run.py  submission.json
projects/project_14/: .gitignore  Pipfile  README.md  submission.json
projects/project_14/src/gps_logger/: CMakeLists.txt  package.xml
projects/project_14/src/simulation/: CMakeLists.txt  package.xml
projects/project_14/src/simulation/models/ground_grass/materials/scripts/: floor.material
projects/project_14/src/simulation/models/ucsd_track_v1/: model.sdf
projects/project_14/src/simulation/scripts/: ackermann_controller.py
projects/project_15/: README.md
projects/project_16/: README.md
projects/project_17/: 2021-03-16-12-17-51.bag  submission.json
projects/project_18/: environment.yml
projects/project_18/src/ros_navigation/ucsd_f1tenth_description/: package.xml
projects/project_18/src/ros_navigation/ucsd_f1tenth_description/launch/: mybot_rviz_gmapping.launch
projects/project_19/: README.md  run.py  submission.json
projects/project_2/: .gitignore  Dockerfile  run.py
projects/project_20/: README.md  run.py
projects/project_21/: .gitignore  README.md  old_index.html  submission.json
projects/project_22/: README.md  index.md  run.py  submission.json
projects/project_23/: .gitignore  Dockerfile  README.md  requirements.txt  run.py
projects/project_24/: .gitignore  README.md
projects/project_25/: README.md  submission.json
projects/project_26/: README.md  requirements.txt  run.py
projects/project_27/: README.md  eda.py  revision.py  run.py
projects/project_28/: .gitignore  README.md
projects/project_29/: .gitignore  README.md  etl.py  requirements.txt  word.py
projects/project_3/: .gitignore  README.md  news_vectors.json  run.py  vector.json
projects/project_31/: .gitignore  README.md  pip-requirements.txt  requirements.txt  run.py  submission.json
projects/project_32/: .gitignore  README.md  run.py  submission.json  test.npy
projects/project_33/: .gitignore  README.md  run.py
projects/project_34/: .gitignore  Dockerfile  README.md  run.py  submission.json
projects/project_35/: Dockerfile  run.py
projects/project_36/: .gitignore  run.py
projects/project_37/: .gitignore  LICENSE  README.md  run.py
projects/project_38/: Dockerfile  README.md  submission.json
projects/project_39/: requirements.txt  submission.json
projects/project_4/: README.md
projects/project_40/: .gitignore  .gitmodules  README.md
projects/project_41/: README.md  requirements.txt  submission.json
projects/project_42/: .gitmodules  Dockerfile  run.py
projects/project_43/: .gitignore  .gitmodules  README.md  run.py
projects/project_44/: .gitignore  README.md  run.py  submission.json
projects/project_45/: Dockerfile  README.md  requirements.txt  run.py  workout_db.sql
(+4980 files in other folders)
