<?xml version="1.0"?>
<package format="2">
  <name>robot_description</name>
  <version>1.0.0</version>
  <description>The robot_description package</description>

  <maintainer email="ggibo@uscd.edu">Garrett Gibo</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>gazebo_ros_control</exec_depend>
  <exec_depend>hardware_interface</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>transmission_interface</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
  </export>
</package>
