<?xml version="1.0"?>
<package format="2">
  <name>gps_logger</name>
  <version>0.0.0</version>
  <description>The gps_logger package</description>

  <maintainer email="garrett@todo.todo">garrett</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>

  <export>
  </export>
</package>
