<?xml version="1.0"?>
<package format="2">
  <name>simulation</name>
  <version>0.0.1</version>
  <description>The simulation package</description>

  <maintainer email="ggibo@ucsd.edu">user</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>ackermann_msgs</exec_depend>
  <exec_depend>ackermann_vehicle_description</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>controller_manager_msgs</exec_depend>
  <exec_depend>effort_controllers</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>joint_state_controller</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf</exec_depend>

  <export>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
  </export>
</package>
